# tree-sitter-maparoni

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
.github/workflows/: ci.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: nsw-covid.mpex  styles.mpex
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt  literals.txt
