[package]
name = "tree-sitter-maparoni"
description = "Maparoni grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "Maparoni"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/maparoni/tree-sitter-maparoni"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
